# libdrt

./: CMakeLists.txt  README.md  cli.cpp  drt.cpp  eigentorchconversions.h  eistoeigen.h  eistotorch.cpp  eistotorch.h  main.cpp  tensoroptions.h  testtorchdrt.cpp  torchdrt.cpp
LBFG/: types.h
LBFG/LBFGSpp/: LineSearchNocedalWright.h  Param.h
doc/: DoxygenLayout.xml  libeisdrt.doxygen.in  mainpage.txt
drt/: drt.h
eisdrt/: drt.h  eigendrt.h  eisdrt.h  eistorchdrt.h  torchdrt.h  types.h
pkgconfig/: libeisdrt.pc.in  libeisdrt_torch.pc.in
